  These routes now accepts expand=false to simply list the child resources ids.
* In /tools/metrics-prometheus:
  - 'orthanc_dicom_cache_size' renamed into 'orthanc_dicom_cache_size_mb'
  - added 'orthanc_storage_cache_count' and 'orthanc_storage_cache_size_mb'


Plugins
-------

* Plugins are now allowed to modify/delete private metadata/attachments
  (i.e. whose identifiers are < 1024)


Maintenance
-----------

* Fix unit test PngWriter.Color16Pattern on big-endian architectures,
  as suggested by Etienne Mollier: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1041813
* Prevent the leak of the full path of the source files in the binaries
* Fix loading of DCMTK dictionary in the MultitenantDicom plugin when built dynamically:
  https://discourse.orthanc-server.org/t/dimse-failure-using-multitenant-plugin/3665
* Housekeeper: Introduced a 'sleep' to lower CPU usage when idle.
* Support multiple values in SpecificCharacterSet in C-Find answers:
  https://discourse.orthanc-server.org/t/c-find-fails-on-unknown-specific-character-set-iso-2022-ir-6-iso-2022-ir-100/3947
* When exporting a study archive, make sure to use the PatientName from the study and not from the patient
  in case of PatientID collision.
* DICOM C-Store:
  - Avoid some unneccessary renegotiation of DICOM association.
  - Force renegotiation in case no presentation context were accepted in previous association (we have
    observed PACS that were not consistent in the accepted presentation contexts)
  - Improved logging
* Upgraded dependencies for static builds:
  - boost 1.83.0
* Upgraded minizip library to stay away from CVE-2023-45853 although Orthanc is likely not affected since zip
  filenames are based on DICOM Tag values whose length is limited in size.
  Great thanks to James Addison for notifying us about the vulnerability and patch to apply !


Version 1.12.1 (2023-07-04)
===========================

General
-------
